[package]
name = "grep-clone"
version = "0.1.0"
authors = ["Khushal Agrawal agrawalkhushal04@gmail.com"]
edition = "2021"
description = "A grep clone implementation in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
